# QuantNexus-plugins

./: .gitignore  README.md  registry.json
back-test-nexus/src/engine/: .gitignore  =3.0  DATABASE_PATH_CONFIG.md  build.sh  pyproject.toml  requirements.txt  setup.py
back-test-nexus/src/engine/src/: __init__.py  account.pyx  config.pyx  lifecycle.pyx  main.py  service.py  service.pyx  workflow.pyx
back-test-nexus/src/engine/src/checkpoint/: __init__.py  manager.pyx  storage.pyx
back-test-nexus/src/engine/src/data/: provider.py
back-test-nexus/src/engine/src/engine/: backtrader_engine.py  base.pyx
back-test-nexus/src/engine/src/estimator/: __init__.py  llm_trigger.py
back-test-nexus/src/engine/src/exceptions/: __init__.py  backtest_exceptions.py
back-test-nexus/src/engine/src/progress/: __init__.py  tracker.py
back-test-nexus/src/engine/src/proto/: backtest_pb2.py  backtest_pb2.pyi  backtest_pb2_grpc.py  common_pb2.pyi  plugin_pb2.py  plugin_pb2_grpc.py
back-test-nexus/src/engine/src/storage/: __init__.py  result_store.py  task_store.py
back-test-nexus/src/engine/src/strategy/: __init__.py  database_loader.py  executor.py  group.py  strategy_loader.py  test_suite_builder.py
back-test-nexus/src/engine/src/utils/: __init__.py  date_range.py  db_utils.py
quant-lab-plugin/: CMakeLists.txt  manifest.json
quant-lab-plugin/locales/de_DE/: quant-lab.json
quant-lab-plugin/locales/en_US/: quant-lab.json
quant-lab-plugin/locales/es_ES/: quant-lab.json
quant-lab-plugin/locales/fr_FR/: quant-lab.json
quant-lab-plugin/locales/it_IT/: quant-lab.json
quant-lab-plugin/locales/ja_JP/: quant-lab.json
quant-lab-plugin/locales/ko_KR/: quant-lab.json
quant-lab-plugin/locales/pt_PT/: quant-lab.json
quant-lab-plugin/locales/zh_CN/: quant-lab.json
quant-lab-plugin/locales/zh_TW/: quant-lab.json
quant-lab-plugin/scripts/: install.js  install.ts  uninstall.js  uninstall.ts  upgrade.js  upgrade.ts
quant-lab-plugin/ui/quant-lab-nexus/: package.json  tsconfig.json
quant-lab-plugin/ui/quant-lab-nexus/locales/de_DE/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/locales/en_US/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/locales/es_ES/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/locales/fr_FR/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/locales/it_IT/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/locales/ja_JP/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/locales/ko_KR/: quant-lab.json
quant-lab-plugin/ui/quant-lab-nexus/src/: constants.ts  index.tsx  types.ts
quant-lab-plugin/ui/quant-lab-nexus/src/components/: index.ts  (+29 more)
(+309 files in other folders)
